service worker add

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
 
     "theme_color":"##FFFDD0;",
     "background-color":"#FFFDD0;",
-    "start_url":"/simple-calculator/",
+    "start_url":"./simple-calculator/",
     "display":"standalone",
     "orientation":"portrait"
 }
