--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,19 @@
 {
     "name":"Simple Calculator",
     "short_name":"Simple Calc",
+    "theme_color":"white;",
+    "background-color":"white",
+    "start_url":"./simple-calculator/",
+    "display":"standalone",
+    "orientation":"portrait",
 
     "icons":
+    [
     {"src":"./assets/favicon.png",
         "sizes":"48 x 48",
         "type":"image/png",
         "purpose":"any maskable"
-    },
+    }]
 
-    "theme_color":"##FFFDD0;",
-    "background-color":"#FFFDD0;",
-    "start_url":"./simple-calculator/",
-    "display":"standalone",
-    "orientation":"portrait"
+   
 }
